# advent-of-code-2025

./: .gitignore  .ocamlformat  README.md  advent-of-code-2025.opam  dune-project
.github/workflows/: ci.yml
lib/: day1.ml
test/: day1.ml  dune
test/data/: day1.txt
